tests/NormalTests/paczka1/fuzzy1/64560480.err
Error in line 10: A792 A172 57,2
Error in line 26: xpqD A792 54,9
